Final commit! Finiiiished!!

--- a/chapter2.tex
+++ b/chapter2.tex
@@ -11,7 +11,7 @@
 \begin{figure}[t]
 \centering
 \includegraphics[scale=0.4]{./graphlets.png}
-\caption{گرافلت‌های دو تا پنج رأسی. رئوس همرنگ روی هر گرافلت، یک اوربیت را نمایش می‌دهند. شماره‌ی هر اوربیت روی یکی از رئوسش مشخص شده‌است.}
+\caption[گرافلت‌ها]{گرافلت‌های دو تا پنج رأسی. رئوس همرنگ روی هر گرافلت، یک اوربیت را نمایش می‌دهند. شماره‌ی هر اوربیت روی یکی از رئوسش مشخص شده‌است.}
 \label{fig:graphlets}
 \end{figure}
 
@@ -76,7 +76,7 @@ $p(u,v) = deg(v) -1 -c(u,v)$.
 \begin{figure}[t]
 \centering
 \includegraphics[scale=0.3]{./o59-orbit-relation.png}
-\caption{شمارش اوربیت ۵۹. اضافه کردن یال بین رأس $y$ و دیگر رئوس باعث قرار گرفتن $x$ در اوربیت‌های مختلف می‌شود.}
+\caption[شمارش اوربیت ۵۹]{شمارش اوربیت ۵۹. اضافه کردن یال بین رأس $y$ و دیگر رئوس باعث قرار گرفتن $x$ در اوربیت‌های مختلف می‌شود.}
 \label{fig:o59-orbit-relation}
 \end{figure}
 
@@ -158,7 +158,7 @@ $\dfrac{k_i}{\sum_jk_j}$
 \lr{PW3} & CM & ۹۹۴ & $\lambda = 3.00$ & ۵۰۴ & ۵۵۵ \\
 \lr{PW4} & CM & ۹۶۴ & $\lambda = 3.25$ & ۴۸۷ & ۵۰۹ \\ \hline
 \end{tabular}
-\caption{
+\caption[مجموعه گراف‌های تصادفی]{
 گراف‌های تولید شده با استفاده از مدل‌های تصادفی گراف. ER نمایش دهنده مدل تصادفی اردوش-رنی، WS نمایش دهنده مدل تصادفی واتس-استروگاتس، GEO نمایش دهنده مدل تصادفی هندسی و \lr{PW1} تا \lr{PW4} نمایش‌دهنده مدل‌ تصادفی ترتیبی هستند. لازم به ذکر است که \lr{PW3} همان مدل باراباشی-آلبرت می‌باشد.
 }
 \label{tab:random-graph-datasets-statistics}
@@ -170,7 +170,7 @@ $\dfrac{k_i}{\sum_jk_j}$
 \begin{figure}[t]
 \centering
 \includegraphics[scale=0.5]{./scale-free-distance.pdf}
-\caption{فاصله گراف‌های \lr{PW2} و \lr{PW3} و \lr{PW4} از گراف مرجع \lr{PW1} با استفاده از گرافلت کرنل گاوسی با پارامتر $\gamma = 2$.}
+\caption[فاصله گراف‌های تصادفی]{فاصله گراف‌های \lr{PW2} و \lr{PW3} و \lr{PW4} از گراف مرجع \lr{PW1} با استفاده از گرافلت کرنل گاوسی با پارامتر $\gamma = 2$.}
 \label{fig:scale-free-distance}
 \end{figure}
 
@@ -186,8 +186,8 @@ $\dfrac{k_i}{\sum_jk_j}$
 \lr{PW1} در مقابل \lr{PW3} & $C=10, \gamma = 0.01$ & 80\% \\ \hline
 \lr{PW1} در مقابل \lr{PW4} & $C=10, \gamma = 0.01$ & 84\% \\ \hline
 \end{tabular}
-\caption{
-دقت کرنل در تفکیک گراف‌های \متنلاتین{scale-free} از یکدیگر. برای هر گروه، بهترین پارامتر‌ها توسط $SVM$ انتخاب شده‌است.
+\caption[دقت کرنل در تفکیک گراف‌های مقیاس آزاد از یکدیگر]{
+دقت کرنل در تفکیک گراف‌های مقیاس آزاد از یکدیگر. برای هر گروه، بهترین پارامتر‌ها توسط $SVM$ انتخاب شده‌است.
 }
 \label{tab:svm-scale-free}
 \end{table}
@@ -198,7 +198,7 @@ $\dfrac{k_i}{\sum_jk_j}$
 \begin{figure}[t]
 \centering
 \includegraphics[scale=0.5]{./random-graph-distance.pdf}
-\caption{فاصله گراف‌های \lr{ER} و \lr{GEO} و \lr{WS} از گراف‌های مرجع \lr{BA} با استفاده از گرافلت کرنل گاوسی با پارامتر $\gamma = 2$.}
+\caption[فاصله گراف‌های تصادفی]{فاصله گراف‌های \lr{ER} و \lr{GEO} و \lr{WS} از گراف‌های مرجع \lr{BA} با استفاده از گرافلت کرنل گاوسی با پارامتر $\gamma = 2$.}
 \label{fig:random-graph-distance}
 \end{figure}
 
@@ -212,8 +212,8 @@ $\dfrac{k_i}{\sum_jk_j}$
 \lr{BA} در مقابل \lr{WS} & $C=10, \gamma = 10$ & 82\% \\ \hline
 \lr{BA} در مقابل \lr{GEO} & $C=10, \gamma = 10$ & 81\% \\ \hline
 \end{tabular}
-\caption{
-دقت کرنل در تفکیک گراف‌های \متنلاتین{scale-free} از یکدیگر. برای هر گروه، بهترین پارامتر‌ها توسط $SVM$ انتخاب شده‌است.
+\caption[دقت کرنل در تفکیک گراف‌های مقیاس آزاد از یکدیگر]{
+دقت کرنل در تفکیک گراف‌های مقیاس آزاد از یکدیگر. برای هر گروه، بهترین پارامتر‌ها توسط $SVM$ انتخاب شده‌است.
 }
 \label{tab:svm-random-graph}
 \end{table}
@@ -231,7 +231,7 @@ $\dfrac{k_i}{\sum_jk_j}$
 \lr{PW1} در مقابل \lr{PW3} & $C=10, \gamma = 0.01$ & 80\% & 70\%\\ \hline
 \lr{PW1} در مقابل \lr{PW4} & $C=10, \gamma = 0.01$ & 84\% & 71\%\\ \hline
 \end{tabular}
-\caption{
+\caption[بردار اوربیتی در مقایسه با بردار گرافلتی]{
 دقت تشخیص گراف‌های تصادفی \متنلاتین{PW2}، \متنلاتین{PW3} و \متنلاتین{PW4} از گراف‌های \متنلاتین{PW1} با استفاده از بردار اوربیتی در گرافلت کرنل گاوسی (کرنل گرافلتی) و بردار گرافلتی در گرافلت کرنل گاوسی (کرنل گرافلتی).
 }
 \label{tab:graphlet-vs-orbit}
