--- a/chapter3.tex
+++ b/chapter3.tex
@@ -35,7 +35,7 @@ R/.style={rectangle,draw,thick,align=center,minimum size=0.80cm}]
     \path (7) edge (9);
 \end{tikzpicture}
 }
-\caption{
+\caption[ساختار اسید‌های آمینه]{
 ساختار اسید‌های آمینه. هر اسیدآمینه از یک کربن آلفا تشکیل شده است که با یک گروه آمینه(\متنلاتین{NH2})، یک گروه کربوکسیل (\متنلاتین{COOH}) و یک زنجیره جانبی (\متنلاتین{R}) ارتباط دارد.
 }
 \label{fig:aminoacid}
@@ -87,7 +87,7 @@ R/.style={rectangle,draw,thick,align=center,minimum size=0.80cm}]
     D\&D & 1178 & 2 (691 در مقابل 487) & 263 & 718.5 & 10.03 \\ \hline
     ENZYMES & 600 & 6 (100 تا در هر دسته) & 255 & 691.2 & 9.91 \\ \hline
 \end{tabular}
-\caption{
+\caption[پایگاه‌های داده مورد استفاده و خصوصیات آن‌ها]{
     پایگاه‌های داده مورد استفاده و خصوصیات آن‌ها.
  $\bar{n}$: میانگین اندازه گراف‌ها. $\bar{m}$: میانگین تعداد یال‌های هر گراف.  $\bar{d}$: میانگین بیشترین درجه هر گراف.
 }
@@ -107,7 +107,7 @@ R/.style={rectangle,draw,thick,align=center,minimum size=0.80cm}]
 \center{
 \includegraphics[scale=0.4]{./rig-occurance.png}
 }
-\caption{پر کاربرد‌ترین اتم‌ها و فواصل برای تبدیل پروتئین به گراف در بین ۲۰۰ مقاله. استخراج شده از \جستار{Filippis_2012}}
+\caption[پرکاربردترین تنظیمات برای ایجاد گراف از پروتئین]{پر کاربرد‌ترین اتم‌ها و فواصل برای تبدیل پروتئین به گراف در بین ۲۰۰ مقاله. استخراج شده از \جستار{Filippis_2012}}
 \label{fig:rig-occurance}
 \end{figure}
 
@@ -125,7 +125,7 @@ R/.style={rectangle,draw,thick,align=center,minimum size=0.80cm}]
 ۷ & کربن آلفا & ۷ & ۷۶\% \\ \hline
 ۸ & کربن آلفا & ۶ & ۸۰\% \\ \hline
 \end{tabular}
-\caption{
+\caption[عملکرد گرافلت کرنل گاوسی روی مدل‌های گرافی پروتئین]{
 عملکرد گرافلت کرنل گاوسی روی مدل‌های مختلف تبدیل پروتئین به گراف برای پایگاه داده DD .
 }
 \label{tab:ggk-on-rigs}
@@ -146,7 +146,7 @@ R/.style={rectangle,draw,thick,align=center,minimum size=0.80cm}]
         \includegraphics[width=\textwidth]{./enzymes-ggk-gk.pdf}
         \caption{ENZYME}
     \end{subfigure}
-\caption{گرافلت کرنل گاوسی (GGK) و انواع گرافلت کرنل (GK) . در این شکل، \متنلاتین{GK C5}، \متنلاتین{GK C4} و \متنلاتین{GK C3} گرافلت کرنل‌هایی هستند که به ترتیب تمام گرافلت‌های ۵، ۴ و ۳ رأسی را می‌شمارند. \متنلاتین{GK A5}، \متنلاتین{GK A4} و \متنلاتین{GK A3} گرافلت کرنل‌هایی هستند که به ترتیب تمام گرافلت‌های همبند و ناهمبند ۵، ۴ و ۳ رأسی را می‌شمارند. اعداد ۲۰۰۰، ۴۰۰۰ و ۸۰۰۰ نشان‌دهنده اندازه نمونه انتخاب شده برای تخمین تعداد گرافلت‌هاست.}
+\caption[مقایسه انواع گرافلت‌کرنل‌ها]{گرافلت کرنل گاوسی (GGK) و انواع گرافلت کرنل (GK) . در این شکل، \متنلاتین{GK C5}، \متنلاتین{GK C4} و \متنلاتین{GK C3} گرافلت کرنل‌هایی هستند که به ترتیب تمام گرافلت‌های ۵، ۴ و ۳ رأسی را می‌شمارند. \متنلاتین{GK A5}، \متنلاتین{GK A4} و \متنلاتین{GK A3} گرافلت کرنل‌هایی هستند که به ترتیب تمام گرافلت‌های همبند و ناهمبند ۵، ۴ و ۳ رأسی را می‌شمارند. اعداد ۲۰۰۰، ۴۰۰۰ و ۸۰۰۰ نشان‌دهنده اندازه نمونه انتخاب شده برای تخمین تعداد گرافلت‌هاست.}
 \label{fig:gk-ggk-accuracy}
 \end{figure}
 
@@ -196,7 +196,7 @@ R/.style={rectangle,draw,thick,align=center,minimum size=0.80cm}]
     \lr{Random Walk} & \lr{21.68 (±0.94)} & - \\ \hline
     \lr{Shortest Path} & \lr{41.68 (±1.79)} & - \\ \hline
 \end{tabular}
-\caption{دقت دسته بندی ($\pm$ انحراف معیار) 
+\caption[دقت دسته‌بندی کرنل‌های مختلف]{دقت دسته بندی ($\pm$ انحراف معیار) 
 کرنل‌های مختلف روی پایگاه‌های ENZYME و DD.}
 \label{tab:ggk-vs-others}
 \end{table}
@@ -214,7 +214,7 @@ R/.style={rectangle,draw,thick,align=center,minimum size=0.80cm}]
     \lr{Random Walk} & \lr{12'19"} & - \\ \hline
     \lr{Shortest Path} & \lr{5"} & - \\ \hline
 \end{tabular}
-\caption{
+\caption[مدت زمان اجرای گراف کرنل‌ها]{
 مدت زمان اجرای گراف کرنل‌ها روی دو پایگاه ENZYME و DD. خطوط تیره، کمبود حافظه و یا مدت زمان بیش از یک روز محاسبه را نشان می‌دهند.
 }
 \label{tab:ggk-vs-others-runtime}
