--- a/chapter4.tex
+++ b/chapter4.tex
@@ -76,7 +76,7 @@ k((p_i,p_j),(p_u,p_v)) = k_{GGK}(p_i,p_u) + k_{GGK}(p_j,p_v)
 \center{
 \includegraphics[scale=0.5]{./roc.pdf}
 }
-\caption{
+\caption[منحنی ROC]{
 منحنی \متنلاتین
 ‫{‬ROC‫}‬
 برای 
