--- a/main.tex
+++ b/main.tex
@@ -8,6 +8,7 @@
 \tableofcontents
 \clearpage{\pagestyle{empty}\cleardoublepage}
 \listoffigures
+\clearpage{\pagestyle{empty}\cleardoublepage}
 \listoftables
 \clearpage{\pagestyle{empty}\cleardoublepage}
 \mainmatter
