--- a/frontmatters.tex
+++ b/frontmatters.tex
@@ -1,11 +1,11 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %صفحه‌ی بسم الله
-%\thispagestyle{empty}
-%\centerline{{\includegraphics[width=9 cm]{*}}}
-%\newpage
-%\thispagestyle{empty}
-%\clearpage
-%~~~
+\thispagestyle{empty}
+\centerline{{\includegraphics[width=6in]{besmelah.pdf}}}
+\newpage
+\thispagestyle{empty}
+\clearpage
+~~~
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \clearpage
 %\pagenumbering{adadi}
@@ -33,7 +33,7 @@
 % نام خانوادگی پژوهشگر را وارد کنید
 \surname{میلانی}
 % تاریخ پایان‌نامه را وارد کنید
-\thesisdate{\rl{دی ۱۳۹۳}}
+\thesisdate{\rl{بهمن ۱۳۹۳}}
 % کلمات کلیدی پایان‌نامه را وارد کنید
 \keywords{گراف، گرافلت، یادگیری ماشین، کرنل، بیوانفورماتیک، عملکرد پروتئین}
 % چکیده پایان‌نامه را وارد کنید
